# learn-haskell

./: README.md  effective-haskell.cabal
ch10/: README.md
ch10/app/: Main.hs
ch10/src/: Lib.hs
ch11/: chapter11.cabal
ch11/app/: Main.hs
ch11/src/: ExistentialDemo3.hs  FilePack2.hs  FilePack3.hs
ch12/: chapter12.cabal
ch12/src/: MonadicParser.hs  ParsingFunction1.hs
ch13/: LICENSE  chapter13.cabal
ch13/src/: BasicStateDemo.hs  BasicStateDemo2.hs  ExceptState.hs  ExceptT.hs  FailingStatefulParser.hs  Identity.hs  Parser.hs  State.hs  StateExcept.hs  StateT.hs
ch8/hcat/: hcat.cabal
ch9/src/: MyLib.hs
chapter10/: chapter10.cabal
chapter10/src/Lib/Metrics/: Main.hs
chapter10/src/Lib/TraverseDirectoryTree/: Base.hs  Main.hs
chapter11/src/: ExistentialDemo.hs  ExistentialDemo2.hs  FilePack1.hs  FilePack3.hs
chapter12/src/: ApplicativeParser.hs  Encoding.hs  ParsingFunction2.hs
chapter9/: chapter9.cabal
chapter9/app/: Main.hs
chapter9/src/: MyLib.hs
docs/: ROADMAP.md  glossary.md
docs/sources/: README.md  effective-haskell.md  real-world-haskell.md  youtube.md
src/Apps/: README.md
src/Base/: HigherKindedType.hs  README.md  Roles.hs
src/Extensions/: AssociatedTypeFamilies.hs  FunctionalDependencies.hs
src/Exts/: ArbitraryRankPolymorphism.hs  InferredTypes.hs  OverloadedStrings.hs  README.md  UndecidableInstances.hs
src/GHCExt/: AllowAmbiguousTypes.hs  ArbitraryRankPolymorphism.hs  ExistentitallyQuantifiedDataConstructors.hs  FlexibleContexts.hs  FunctionalDependencies.hs  InferredTypes.hs  OverloadedStrings.hs  UndecidableInstances.hs
src/GHCExts/: AssociatedDataFamilies.hs  AssociatedDataFamily.hs  AssociatedTypeFamilies.hs  AssociatedTypeFamily.hs  ClosedTypeFamily.hs  FunctionalDependencies.hs  GADTs.hs  InferredTypes.hs  OpenTypeFamilies.hs  OpenTypeFamily.hs  TypeLevelListOperations.hs  Utils.hs
src/LanguageExtensions/: AllowAmbiguousTypes.hs  ArbitraryRankPolymorphism.hs  ExistentitallyQuantifiedDataConstructors.hs  FlexibleContexts.hs  InferredTypes.hs  OverloadedStrings.hs  UndecidableInstances.hs
src/StandardLibrary/: Prelude.hs
src/Std/: Prelude.hs  README.md
src/YouTube/: Kinds.hs  Kinds2.hs  README.md
test/Base/: HigherKindedTypeSpec.hs  RolesSpec.hs
test/Extensions/: AssociatedTypeFamiliesSpec.hs  FunctionalDependenciesSpec.hs
test/Exts/: Helper.hs  InferredTypesSpec.hs  UndecidableInstancesSpec.hs
test/GHCExt/: ExistentitallyQuantifiedDataConstructorsSpec.hs  FunctionalDependenciesSpec.hs  Helper.hs  InferredTypesSpec.hs
test/GHCExts/: AssociatedDataFamiliesSpec.hs  AssociatedDataFamilySpec.hs  AssociatedTypeFamiliesSpec.hs  AssociatedTypeFamilySpec.hs  ClosedTypeFamilySpec.hs  FunctionalDependenciesSpec.hs  GADTsSpec.hs  Helper.hs  InferredTypesSpec.hs  (+3 more)
(+293 files in other folders)
