cabal-version:      2.4
name:               chapter10
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Sáenz
maintainer:         dsaenz@bebanjo.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lib
                    , Lib.Metrics.Main

    -- Modules included in this library but not exported.
    other-modules:  Lib.Metrics
                  , Lib.TraverseDirectoryTree.Base
                  , Lib.TraverseDirectoryTree.Main
                  , Lib.TraverseDirectoryTree.WithMetrics
                  , Lib.TraverseDirectoryTree.WithoutResultRef

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        directory,
        containers,
        bytestring,
        time,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

executable chapter10
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        bytestring,
        chapter10

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: -O2
